--- a/docs/asciidoc/coreFeatures.adoc
+++ b/docs/asciidoc/coreFeatures.adoc
@@ -879,8 +879,8 @@ There is a more advanced version of `retry` (called `retryWhen`) that uses a "`c
 created by the operator but decorated by the user, in order to customize the retry
 condition.
 
-The companion `Flux` is a `Flux<Throwable>` that gets passed to a `Function`, the sole
-parameter of `retryWhen`. As the user, you define that function and make it return a new
+The companion `Flux` is a `Flux<RetrySignal>` that gets passed to a `Retry` strategy/function,
+supplied as the sole parameter of `retryWhen`. As the user, you define that function and make it return a new
 `Publisher<?>`. Retry cycles go as follows:
 
 . Each time an error happens (giving potential for a retry), the error is emitted into the
@@ -902,11 +902,13 @@ companion would effectively swallow an error. Consider the following way of emul
 Flux<String> flux = Flux
     .<String>error(new IllegalArgumentException()) // <1>
     .doOnError(System.out::println) // <2>
-    .retryWhen(companion -> companion.take(3)); // <3>
+    .retryWhen(() -> // <3>
+        companion -> companion.take(3)); // <4>
 ----
 <1> This continuously produces errors, calling for retry attempts.
 <2> `doOnError` before the retry lets us log and see all failures.
-<3> Here, we consider the first three errors as retry-able (`take(3)`) and then give up.
+<3> The `Retry` function is passed as a `Supplier`
+<4> Here, we consider the first three errors as retry-able (`take(3)`) and then give up.
 ====
 
 In effect, the preceding example results in an empty `Flux`, but it completes successfully. Since
@@ -915,6 +917,9 @@ In effect, the preceding example results in an empty `Flux`, but it completes su
 
 Getting to the same behavior involves a few additional tricks:
 include::snippetRetryWhenRetry.adoc[]
+
+TIP: One can use the builders exposed in `Retry` to achieve the same in a more fluent manner, as
+well as more finely tuned retry strategies: `errorFlux.retryWhen(Retry.max(3));`.
 
 TIP: You can use similar code to implement an "`exponential backoff and retry`" pattern,
 as shown in the <<faq.exponentialBackoff,FAQ>>.
